@@ -7,6 +7,8 @@ simuPOP 1.0 should have a consistently defined and well documented interface.
 * Continue to polish user's guide. (Add bibtex reference to programs cited
   on page 3).
 
+* Go through each function and add support for subpopulation names.
+
 * For each operator,
   - Check applicability (haploid, diploid, etc), and implement it in
 	isCompatible().
